--- a/style.css
+++ b/style.css
@@ -38,19 +38,19 @@ header h1 {
     cursor: pointer;
 }
 
-.player_btn:before,
-.player_btn:after {
-    content: "Friend";
+.player_btn .before,
+.player_btn .after {
+    /* content: "Friend"; */
     top: -5px;
     right: -75px;
     font-size: 25px;
     position: absolute;
 }
-.player_btn:before {
-    content: "AI";
+.player_btn .before {
+    /* content: "AI"; */
     right: auto;
     left: -40px;
-}
+} 
 
 .toggle_btn {
     position: absolute;
